[package]
name        = "tmkms"
description = "Tendermint Key Management System"
version     = "0.7.0-alpha1" # Also update html_root_url in lib.rs when bumping this
authors     = ["Tony Arcieri <tony@iqlusion.io>", "Ismail Khoffi <Ismail.Khoffi@gmail.com>"]
license     = "Apache-2.0"
homepage    = "https://github.com/tendermint/kms/"
readme      = "README.md"
categories  = ["cryptography"]
keywords    = ["cosmos", "ed25519", "kms", "key-management", "yubihsm"]
edition     = "2018"

[badges]
circle-ci = { repository = "tendermint/kms" }

[dependencies]
abscissa_core = "0.4"
atomicwrites = "0.2"
byteorder = "1.2"
bytes = "0.4"
chacha20poly1305 = "0.2"
chrono = "0.4"
failure = "0.1"
gumdrop = "0.7"
hkd32 = { version = "0.3", default-features = false, features = ["mnemonic"] }
hkdf = "0.7"
hmac = "0.7"
lazy_static = "1"
log = "0.4"
prost-amino = "0.4.0"
prost-amino-derive = "0.4.0"
rand_os = "0.1"
rpassword = { version = "3", optional = true }
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1"
sha2 = "0.8"
signatory = { version = "0.16", features = ["ecdsa", "ed25519", "encoding"], optional = true }
signatory-dalek = { version = "0.16", optional = true }
signatory-secp256k1 = "0.16"
signatory-ledger-tm = { version = "0.16", optional = true }
subtle = "2"
subtle-encoding = { version = "0.4", features = ["bech32-preview"] }
tiny-bip39 = "0.6"
wait-timeout = "0.2"
x25519-dalek = "0.5"
yubihsm = { version = "0.29", features = ["setup", "usb"], optional = true }
zeroize = "1"
sgxs-loaders = { version = "0.2", optional = true }
enclave-runner = { version = "0.2", optional = true }
aesm-client = { version = "0.2", features = ["sgxs"], optional = true }
crossbeam-channel = { version = "0.4", optional = true }

[dependencies.signatory-crypto]
package = "signatory"
features = ["ecdsa", "ed25519", "encoding"]
optional = true
git = "https://github.com/crypto-com/signatory.git"
rev = "f6cd136cce8a3b19e794cbd78a13b1517d2c7ff1"

[dependencies.signatory-dalek-crypto]
package = "signatory-dalek"
optional = true
git = "https://github.com/crypto-com/signatory.git"
rev = "f6cd136cce8a3b19e794cbd78a13b1517d2c7ff1"


[dependencies.signatory-sgx]
optional = true
git = "https://github.com/crypto-com/signatory.git"
rev = "f6cd136cce8a3b19e794cbd78a13b1517d2c7ff1"

[dependencies.tendermint]
version = "0.10.1"
features = ["amino-types", "config"]

[dev-dependencies]
tempfile = "3"
rand = "0.7"

[dev-dependencies.abscissa_core]
version = "0.4"
features = ["testing"]



[features]
default = []
softsign = ["signatory", "signatory-dalek"]

sgx = ["signatory-sgx", "sgxs-loaders", "enclave-runner", "aesm-client", "crossbeam-channel", "signatory-crypto", "signatory-dalek-crypto"]
ledgertm = ["signatory-ledger-tm", "signatory", "signatory-dalek"]
yubihsm-mock = ["yubihsm/mockhsm", "signatory", "signatory-dalek"]
yubihsm-client = ["yubihsm", "signatory", "signatory-dalek"]
yubihsm-server = ["yubihsm/http-server", "rpassword", "signatory", "signatory-dalek"]

# Enable integer overflow checks in release builds for security reasons
[profile.release]
overflow-checks = true

[package.metadata.docs.rs]
all-features = true
